k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brain-tasks-service
spec:
  type: ClusterIP
  selector:
    app: brain-tasks
  ports:
  - port: 80
    targetPort: 80
